0.6.0
Added theme to 'View' menu.
Updated theme json files.
Fixed turning off syntax highlighting from view menu.
Added json lang plug.
Added variables colour to themes.
Added java lang plug.
Code clean in lang plugs.
Added PHP language plugin.
Added javascript language plugin.
Added html language plugin.
Switched to sytntax highlighting plugins.

0.5.3
Languages installed in ~/.KKEditQT/langplugins now take precedence.
Fixed languages that g=have no multi line comment.
Fixed marking document dirty if changing highlighting.
Fixed ste syntax language in tab menu.
Added makefile language plugin.
Added red ( root ) theme.
Added grey theme.
Lanuage plugins code clean.
Added "lanuageextra" styling to style files.
Fixed multi line comment having start/end patterns the same.
Added python lang plugin.
New format for language plugs.
Include mime types in lang plugs.
Added sh language file.
Fixed setting bookmark on empty line.
Done plain text.
Redone plugin .pro files so per user install work.
Added theme files.
Started language plugins ( uncomment kkedit-includes.h>#define _USEPLUGINS_ to use ).

0.5.2
Minor makefile changes.
Added about qt menu item.
Done plugin prefs.
Handle broken plugins.
Added disabled plugs to prefs.
Added about box to plugins.
Done plugin prefs dialog.
More plug stuff.
Fixed completion segfault when using CTL-E to pop up dialog.
Fixed marking document dirty wrong.
Plug prefs started.
Store metadata for plugin.
Added metadata to example plugin.
Added example plugin.
Started plugins.
Done 'Show Completions' menu item.
Fixed bookmark screwing up undo/redo.
Done completion.
Done simple print.
Code clean.
Done clear tool output.
Updated online help.
Save tool output geometry.
Added copy to clipboard to tool output window.
Added scrollable text to tool output window.
Remove unwanted borders from doc viewer window.
Wrapped live search.
Added be kind check box to prefs.
Fixed dispapearing edit boxes, when setting prefs.
Removed some debug code.